vlib/v/checker/tests/no_interface_instantiation_a.out
vlib/v/checker/tests/no_interface_instantiation_a.v:4:10: error: cannot instantiate interface `Speaker`
    2 |
    3 | fn main() {
    4 |     _ := Speaker{}
      |          ~~~~~~~~~
    5 | }